--- a/index.html
+++ b/index.html
@@ -3,43 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Game</title>
+    <title>Spooky Maze Challenge</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="maze">
-
-        <div class="cell start" id="start" data-pos="0-0"></div>
-
-        <!-- Row 1 -->
-        <div class="cell path" data-pos="0-1"></div>
-        <div class="cell wall" data-pos="0-2"></div>
-        <div class="cell path" data-pos="0-3"></div>
-        <div class="cell end" id="end" data-pos="0-4"></div>
-        <!-- Row 2 -->
-        <div class="cell wall" data-pos="1-0"></div>
-        <div class="cell path" data-pos="1-1"></div>
-        <div class="cell path" data-pos="1-2"></div>
-        <div class="cell wall" data-pos="1-3"></div>
-        <div class="cell path" data-pos="1-4"></div>
-        <!-- Row 3 -->
-        <div class="cell path" data-pos="2-0"></div>
-        <div class="cell wall" data-pos="2-1"></div>
-        <div class="cell path" data-pos="2-2"></div>
-        <div class="cell path" data-pos="2-3"></div>
-        <div class="cell wall" data-pos="2-4"></div>
-        <!-- Row 4 -->
-        <div class="cell path" data-pos="3-0"></div>
-        <div class="cell path" data-pos="3-1"></div>
-        <div class="cell wall" data-pos="3-2"></div>
-        <div class="cell wall" data-pos="3-3"></div>
-        <div class="cell path" data-pos="3-4"></div>
-        <!-- Row 5 -->
-        <div class="cell wall" data-pos="4-0"></div>
-        <div class="cell path" data-pos="4-1"></div>
-        <div class="cell path" data-pos="4-2"></div>
-        <div class="cell wall" data-pos="4-3"></div>
-        <div class="cell path" data-pos="4-4"></div>
+    <div id="game-container">
+        <h1>Spooky Maze Challenge</h1>
+        <div id="maze">
+            <!-- Maze cells will be generated dynamically in JavaScript -->
+        </div>
+        <div id="controls">
+            <button id="up">↑</button>
+            <button id="left">←</button>
+            <button id="right">→</button>
+            <button id="down">↓</button>
+        </div>
+        <div id="legend">
+            <div class="legend-item"><div class="cell start"></div> Start</div>
+            <div class="legend-item"><div class="cell end"></div> End</div>
+            <div class="legend-item"><div class="cell wall"></div> Wall</div>
+        </div>
     </div>
     <div id="scary" style="display: none;">
         <img src="ftspa2lk47t91.webp" alt="Scary Image" id="scary-img">
@@ -47,6 +31,7 @@
             <source src="scream-with-echo-46585.mp3" type="audio/mpeg">
         </audio>
     </div>
+    <a href="https://ratnesh.vercel.app" target="_blank" id="creator-link">Created by Ratnesh</a>
     <script src="script.js"></script>
 </body>
 </html>
